--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@ $(function() {
         debugger
         var inventoryText = "<strong>Available</strong>";
 
-        var descriptionText = "<p>" + data[:description] + "</p><p>" + inventoryText + "</p>";
+        var descriptionText = "<p>"  + "</p><p>" + inventoryText + "</p>";
         $("#product-" + id).html(descriptionText);
 
     });
